--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -1,316 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
-  <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>
-    </ApplicationIcon>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>openfast</AssemblyName>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <DelaySign>false</DelaySign>
-    <OutputType>Library</OutputType>
-    <RootNamespace>OpenFAST</RootNamespace>
-    <NoStandardLibraries>false</NoStandardLibraries>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <StartupObject>
-    </StartupObject>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <ProjectGuid>{B41B3B40-8E14-45EC-BC3A-311BC8C1C20E}</ProjectGuid>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>bin\Debug\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>
-    </DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>bin\Release\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>
-    </DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>pdbonly</DebugType>
-    <ErrorReport>prompt</ErrorReport>
-    <Optimize>true</Optimize>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+   <PropertyGroup>
+       <TargetFrameworks>netcoreapp2.1;netcoreapp2.2;net45;net461;net462</TargetFrameworks>
+       <PackageId>OpenFAST</PackageId>
+       <Version>1.0.0.0</Version>
+       <Authors>STT</Authors>
+       <Product>OpenFAST</Product>
+       <Description>OpenFAST</Description>
+       <AssemblyVersion>1.0.0.0</AssemblyVersion>
+       <FileVersion>1.0.0.0</FileVersion>
+       <OutputType>Library</OutputType>
+       <Platforms>AnyCPU;x64</Platforms>
+   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System">
-      <Name>System</Name>
-    </Reference>
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data">
-      <Name>System.Data</Name>
-    </Reference>
-    <Reference Include="System.Xml">
-      <Name>System.Xml</Name>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ApplicationTypeDictionary.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="BitVector.cs" />
-    <Compile Include="BitVectorBuilder.cs" />
-    <Compile Include="BitVectorReader.cs" />
-    <Compile Include="BitVectorValue.cs" />
-    <Compile Include="ByteBuffer.cs" />
-    <Compile Include="ByteUtil.cs" />
-    <Compile Include="ByteVectorValue.cs" />
-    <Compile Include="Codec\ICoder.cs" />
-    <Compile Include="Codec\FastDecoder.cs" />
-    <Compile Include="Codec\FastEncoder.cs" />
-    <Compile Include="Context.cs" />
-    <Compile Include="DateValue.cs" />
-    <Compile Include="Debug\BasicDecodeTrace.cs" />
-    <Compile Include="Debug\BasicEncodeTrace.cs" />
-    <Compile Include="Debug\ITrace.cs" />
-    <Compile Include="DecimalValue.cs" />
-    <Compile Include="Error\FastException.cs" />
-    <Compile Include="Error\RepErrorException.cs" />
-    <Compile Include="Error\StatErrorException.cs" />
-    <Compile Include="IDictionary.cs" />
-    <Compile Include="Error\Errors.cs" />
-    <Compile Include="Error\ErrorHandler.cs" />
-    <Compile Include="Error\FastConstants.cs" />
-    <Compile Include="Error\FastDynamicError.cs" />
-    <Compile Include="Error\DynErrorException.cs" />
-    <Compile Include="IFieldValue.cs" />
-    <Compile Include="Global.cs" />
-    <Compile Include="GlobalDictionary.cs" />
-    <Compile Include="GroupValue.cs" />
-    <Compile Include="IllegalStateException.cs" />
-    <Compile Include="IntegerValue.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="IMessageBlockReader.cs" />
-    <Compile Include="IMessageHandler.cs" />
-    <Compile Include="MessageInputStream.cs" />
-    <Compile Include="MessageOutputStream.cs" />
-    <Compile Include="IMessageStream.cs" />
-    <Compile Include="NumericValue.cs" />
-    <Compile Include="PipedStream.cs" />
-    <Compile Include="QName.cs" />
-    <Compile Include="RuntimeException.cs" />
-    <Compile Include="ScalarValue.cs" />
-    <Compile Include="SequenceValue.cs" />
-    <Compile Include="Sessions\AbstractSessionControlProtocol.cs" />
-    <Compile Include="Sessions\BasicClient.cs" />
-    <Compile Include="Sessions\IClient.cs" />
-    <Compile Include="Sessions\IConnection.cs" />
-    <Compile Include="Sessions\ConnectionListener.cs" />
-    <Compile Include="Sessions\IEndpoint.cs" />
-    <Compile Include="Sessions\FastClient.cs" />
-    <Compile Include="Sessions\FastConnectionException.cs" />
-    <Compile Include="Sessions\FastServer.cs" />
-    <Compile Include="Sessions\LocalConnection.cs" />
-    <Compile Include="Sessions\LocalEndpoint.cs" />
-    <Compile Include="Sessions\MessageListener.cs" />
-    <Compile Include="Sessions\Multicast\MulticastConnection.cs" />
-    <Compile Include="Sessions\Multicast\MulticastEndpoint.cs" />
-    <Compile Include="Sessions\Multicast\MulticastInputStream.cs" />
-    <Compile Include="Sessions\RecordingEndpoint.cs" />
-    <Compile Include="Sessions\Session.cs" />
-    <Compile Include="Sessions\SessionConstants.cs" />
-    <Compile Include="Sessions\SessionControlProtocol10.cs" />
-    <Compile Include="Sessions\SessionControlProtocol11.cs" />
-    <Compile Include="Sessions\SessionFactory.cs" />
-    <Compile Include="Sessions\SessionHandler.cs" />
-    <Compile Include="Sessions\SessionListener.cs" />
-    <Compile Include="Sessions\ISessionMessageHandler.cs" />
-    <Compile Include="Sessions\ISessionProtocol.cs" />
-    <Compile Include="Sessions\Tcp\TcpConnection.cs" />
-    <Compile Include="Sessions\Tcp\TcpEndpoint.cs" />
-    <Compile Include="Sessions\Template\Exchange\AbstractFieldInstructionConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\ComposedDecimalConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\ConversionContext.cs" />
-    <Compile Include="Sessions\Template\Exchange\DynamicTemplateReferenceConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\IFieldInstructionConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\GroupConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\ScalarConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\SequenceConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\StaticTemplateReferenceConverter.cs" />
-    <Compile Include="Sessions\Template\Exchange\VariableLengthInstructionConverter.cs" />
-    <Compile Include="StringValue.cs" />
-    <Compile Include="TemplateDictionary.cs" />
-    <Compile Include="Template\AbstractTemplateRegistry.cs" />
-    <Compile Include="Template\BasicTemplateRegistry.cs" />
-    <Compile Include="Template\ComposedScalar.cs" />
-    <Compile Include="Template\IComposedValueConverter.cs" />
-    <Compile Include="Template\DynamicTemplateReference.cs" />
-    <Compile Include="Template\Field.cs" />
-    <Compile Include="Template\IFieldSet.cs" />
-    <Compile Include="Template\Group.cs" />
-    <Compile Include="Template\Loader\AbstractFieldParser.cs" />
-    <Compile Include="Template\Loader\ByteVectorParser.cs" />
-    <Compile Include="Template\Loader\ComposedDecimalParser.cs" />
-    <Compile Include="Template\Loader\IFieldParser.cs" />
-    <Compile Include="Template\Loader\GroupParser.cs" />
-    <Compile Include="Template\Loader\IMessageTemplateLoader.cs" />
-    <Compile Include="Template\Loader\ParsingContext.cs" />
-    <Compile Include="Template\Loader\ScalarParser.cs" />
-    <Compile Include="Template\Loader\SequenceParser.cs" />
-    <Compile Include="Template\Loader\StringParser.cs" />
-    <Compile Include="Template\Loader\TemplateParser.cs" />
-    <Compile Include="Template\Loader\TemplateRefParser.cs" />
-    <Compile Include="Template\Loader\VariableLengthScalarParser.cs" />
-    <Compile Include="Template\Loader\XMLMessageTemplateLoader.cs" />
-    <Compile Include="Template\LongValue.cs" />
-    <Compile Include="Template\MessageTemplate.cs" />
-    <Compile Include="Template\NullTemplateRegistry.cs" />
-    <Compile Include="Template\Operators\AlwaysPresentOperatorCodec.cs" />
-    <Compile Include="Template\Operators\ConstantOperatorCodec.cs" />
-    <Compile Include="Template\Operators\CopyOperatorCodec.cs" />
-    <Compile Include="Template\Operators\DefaultOperatorCodec.cs" />
-    <Compile Include="Template\Operators\DeltaDecimalOperatorCodec.cs" />
-    <Compile Include="Template\Operators\DeltaIntegerOperatorCodec.cs" />
-    <Compile Include="Template\Operators\DeltaStringOperatorCodec.cs" />
-    <Compile Include="Template\Operators\IncrementIntegerOperatorCodec.cs" />
-    <Compile Include="Template\Operators\NoneOperatorCodec.cs" />
-    <Compile Include="Template\Operators\Operator.cs" />
-    <Compile Include="Template\Operators\OperatorCodec.cs" />
-    <Compile Include="Template\Operators\OptionallyPresentOperatorCodec.cs" />
-    <Compile Include="Template\Operators\TailOperatorCodec.cs" />
-    <Compile Include="Template\Scalar.cs" />
-    <Compile Include="Template\Sequence.cs" />
-    <Compile Include="Template\StaticTemplateReference.cs" />
-    <Compile Include="Template\ITemplateRegistry.cs" />
-    <Compile Include="Template\TwinValue.cs" />
-    <Compile Include="Template\Types\ByteVectorType.cs" />
-    <Compile Include="Template\Types\Codec\AsciiString.cs" />
-    <Compile Include="Template\Types\Codec\BitVectorType.cs" />
-    <Compile Include="Template\Types\Codec\ByteVectorType.cs" />
-    <Compile Include="Template\Types\Codec\DateInteger.cs" />
-    <Compile Include="Template\Types\Codec\DateString.cs" />
-    <Compile Include="Template\Types\Codec\EpochTimestamp.cs" />
-    <Compile Include="Template\Types\Codec\IntegerCodec.cs" />
-    <Compile Include="Template\Types\Codec\MillisecondsSinceMidnight.cs" />
-    <Compile Include="Template\Types\Codec\NotStopBitEncodedTypeCodec.cs" />
-    <Compile Include="Template\Types\Codec\NullableAsciiString.cs" />
-    <Compile Include="Template\Types\Codec\NullableByteVector.cs" />
-    <Compile Include="Template\Types\Codec\NullableSignedInteger.cs" />
-    <Compile Include="Template\Types\Codec\NullableSingleFieldDecimal.cs" />
-    <Compile Include="Template\Types\Codec\NullableStringDelta.cs" />
-    <Compile Include="Template\Types\Codec\NullableUnicodeString.cs" />
-    <Compile Include="Template\Types\Codec\NullableUnsignedInteger.cs" />
-    <Compile Include="Template\Types\Codec\SignedInteger.cs" />
-    <Compile Include="Template\Types\Codec\SingleFieldDecimal.cs" />
-    <Compile Include="Template\Types\Codec\StringDelta.cs" />
-    <Compile Include="Template\Types\Codec\TimeInteger.cs" />
-    <Compile Include="Template\Types\Codec\TimestampInteger.cs" />
-    <Compile Include="Template\Types\Codec\TypeCodec.cs" />
-    <Compile Include="Template\Types\Codec\UnicodeString.cs" />
-    <Compile Include="Template\Types\Codec\UnsignedInteger.cs" />
-    <Compile Include="Template\Types\DateType.cs" />
-    <Compile Include="Template\Types\DecimalConverter.cs" />
-    <Compile Include="Template\Types\DecimalType.cs" />
-    <Compile Include="Template\Types\IntegerType.cs" />
-    <Compile Include="Template\Types\SignedIntegerType.cs" />
-    <Compile Include="Template\Types\SimpleType.cs" />
-    <Compile Include="Template\Types\StringType.cs" />
-    <Compile Include="Template\Types\FastType.cs" />
-    <Compile Include="Template\Types\UnsignedIntegerType.cs" />
-    <Compile Include="UnsupportedOperationException.cs" />
-    <Compile Include="Utility\RecordingInputStream.cs" />
-    <Compile Include="Utility\RecordingOutputStream.cs" />
-    <Compile Include="Utility\Util.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 2.0 %28x86%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.0 %28x86%29</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
+       <Reference Include="System" />
+       <Reference Include="System.Core" />
+       <Reference Include="System.Data" />
+       <Reference Include="System.Xml" />
+   </ItemGroup>
 </Project>
