--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -1,210 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{05D5E09C-CEF1-4831-BF48-DAA36977100B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenFAST.UnitTests</RootNamespace>
-    <AssemblyName>OpenFAST.UnitTests</AssemblyName>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <TargetFrameworkProfile />
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+   <PropertyGroup>
+     <TargetFrameworks>netcoreapp2.1;netcoreapp2.2;net45;net461;net462</TargetFrameworks>
+       <PackageId>UnitTest</PackageId>
+       <Version>1.0.0.0</Version>
+       <Authors>STT</Authors>
+       <Product>UnitTest</Product>
+       <Description></Description>
+       <AssemblyVersion>1.0.0.0</AssemblyVersion>
+       <FileVersion>1.0.0.0</FileVersion>
+       <OutputType>Library</OutputType>
+       <Platforms>AnyCPU;x64</Platforms>
+   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ApplicationTypeDictionaryTest.cs" />
-    <Compile Include="BitVectorReaderTest.cs" />
-    <Compile Include="BitVectorTest.cs" />
-    <Compile Include="BitVectorValueTest.cs" />
-    <Compile Include="ByteUtilTest.cs" />
-    <Compile Include="ByteVectorValueTest.cs" />
-    <Compile Include="Codec\FastDecoderTest.cs" />
-    <Compile Include="Codec\FastEncoderTest.cs" />
-    <Compile Include="DecimalValueTest.cs" />
-    <Compile Include="DictionaryTest.cs" />
-    <Compile Include="EncodeDecodeTest.cs" />
-    <Compile Include="ExhaustiveOperatorTest.cs" />
-    <Compile Include="GroupValueTest.cs" />
-    <Compile Include="IntegerValueTest.cs" />
-    <Compile Include="MessageInputStreamTest.cs" />
-    <Compile Include="MessageOutputStreamTest.cs" />
-    <Compile Include="MessageTest.cs" />
-    <Compile Include="Scenario\CmeTemplateTest.cs" />
-    <Compile Include="Scenario\ErrorCasesTest.cs" />
-    <Compile Include="Sessions\SessionControlProtocol11Test.cs" />
-    <Compile Include="StringValueTest.cs" />
-    <Compile Include="TemplateDictionaryTest.cs" />
-    <Compile Include="TemplateTest.cs" />
-    <Compile Include="Template\BasicTemplateRegistryTest.cs" />
-    <Compile Include="Template\DynamicTemplateReferenceTest.cs" />
-    <Compile Include="Template\GroupTest.cs" />
-    <Compile Include="Template\Loader\ComposedDecimalParserTest.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Template\Loader\ScalarParserTest.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Template\Loader\SequenceParserTest.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Template\Loader\StringParserTest.cs" />
-    <Compile Include="Template\Loader\TemplateRefParserTest.cs" />
-    <Compile Include="Template\Loader\XmlMessageTemplateLoaderTest .cs" />
-    <Compile Include="Template\MessageTemplateTest.cs" />
-    <Compile Include="Template\Operators\DefaultOperatorTest.cs" />
-    <Compile Include="Template\Operators\DeltaByteVectorOperatorTest.cs" />
-    <Compile Include="Template\Operators\DeltaDecimalOperatorTest.cs" />
-    <Compile Include="Template\Operators\DeltaStringOperatorTest.cs" />
-    <Compile Include="Template\Operators\OperatorTest.cs" />
-    <Compile Include="Template\SequenceTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableAsciiStringTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableByteVectorTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableSignedIntegerTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableSingleFieldDecimalTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableStringDeltaTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableUnicodeStringTest.cs" />
-    <Compile Include="Template\Types\Codec\NullableUnsignedIntegerTest.cs" />
-    <Compile Include="Template\Types\Codec\SignedIntegerTest.cs" />
-    <Compile Include="Template\Types\Codec\SingleFieldDecimalTest.cs" />
-    <Compile Include="Template\Types\Codec\StringDeltaTest.cs" />
-    <Compile Include="Template\Types\Codec\UnicodeStringTest.cs" />
-    <Compile Include="Template\Types\Codec\UnsignedIntegerTest.cs" />
-    <Compile Include="Template\TypeTest.cs" />
-    <Compile Include="Template\Types\Codec\AsciiStringTest.cs" />
-    <Compile Include="Template\Types\Codec\ByteVectorTest.cs" />
-    <Compile Include="Template\Types\Codec\ComposedDecimalTest.cs" />
-    <Compile Include="Template\Types\Codec\DateStringTest.cs" />
-    <Compile Include="Template\Types\IntegerTypeTest.cs" />
-    <Compile Include="Template\Types\StringTypeTest.cs" />
-    <Compile Include="Test\ObjectMother.cs" />
-    <Compile Include="Test\OpenFastTestCase.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\TestUtil.cs" />
-    <Compile Include="TypeConversionTest.cs" />
-    <Compile Include="XmlBasedTests\XmlTestRunner.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\OpenFast\OpenFAST.csproj">
-      <Project>{B41B3B40-8E14-45EC-BC3A-311BC8C1C20E}</Project>
-      <Name>OpenFAST</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\Files\CME\templates.xml">
-      <Link>CME\templates.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Files\components.xml">
-      <Link>components.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Files\FPL\mdIncrementalRefreshTemplate.xml">
-      <Link>FPL\mdIncrementalRefreshTemplate.xml</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Files\preTrade.xml">
-      <Link>preTrade.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Files\session.xml">
-      <Link>session.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Files\Tests\SampleXmlTest.xml">
-      <Link>XmlBasedTests\SampleXmlTest.xml</Link>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Files\CME\messages.fast">
-      <Link>CME\messages.fast</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <EmbeddedResource Include="..\Files\TestSchema.xsd">
-      <Link>XmlBasedTests\TestSchema.xsd</Link>
-    </EmbeddedResource>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
-      <Visible>False</Visible>
-      <ProductName>Windows Installer 3.1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+     <PackageReference Include="NUnit" Version="3.12.0" />
+   </ItemGroup>
+
+   <ItemGroup>
+       <Reference Include="System" />
+       <Reference Include="System.Core" />
+       <Reference Include="System.Data" />
+       <Reference Include="System.Xml" />
+       <Reference Include="System.Xml.Linq" />
+   </ItemGroup>
+   <ItemGroup>
+       <ProjectReference Include="..\OpenFast\OpenFAST.csproj" />
+   </ItemGroup>
 </Project>
